Remove unused pages

--- a/server/sass/main.scss
+++ b/server/sass/main.scss
@@ -37,6 +37,5 @@
 
 /* Page Components */
 @import 
-    './components/pages/Default',
-    './components/pages/StyleGuide',
+    './components/pages/Home',
     './components/pages/Wildcard';
