--- a/server/sass/components/ui/MobileNavigation/_MobileNavigation.scss
+++ b/server/sass/components/ui/MobileNavigation/_MobileNavigation.scss
@@ -6,7 +6,6 @@
     display: none;
 }
 
-
 .MobileNavigation__button {
     cursor: pointer;
     position: fixed;
@@ -14,9 +13,8 @@
     right: 12px;
     font-size: 2.5em;
     z-index: 8;
-    color: $offWhite;
+    color: var(--white);
 }
-
 
 .MobileNavigation__menu {
     position: fixed;
@@ -34,7 +32,6 @@
         display: block;
         opacity: 1;
         transition: 200ms;
-        background: desaturate(darken($primaryColor, 35%), 70%);
         z-index: 7;
         width: 100%;
         height: 100%;
@@ -45,7 +42,6 @@
         }
     }
 }
-
 
 .MobileNavigation__list {
     padding: 0;
