--- a/server/sass/config/_colors.scss
+++ b/server/sass/config/_colors.scss
@@ -1,24 +1,22 @@
-/* Gradient shadows */
-$shadow: rgba(0, 0, 0, 0.3);
-$shadow_light: rgba(0, 0, 0, 0.1);
-$shadow_thick: rgba(0, 0, 0, 0.5);
+/*
+ *  Default color variables
+ */
 
+ :root {
+    // Gradient shadows
+    --shadow: rgba(0, 0, 0, 0.3);
+    --shadow-light: rgba(0, 0, 0, 0.1);
+    --shadow-thick: rgba(0, 0, 0, 0.5);
 
-/* Grayscale */
-$black: #080808;
-$gray: #414141;
-$offWhite: #e8e8e8;
+    // Grayscale
+    --black: #080808;
+    --gray: #414141;
+    --white: #e8e8e8;
 
-
-/* Theme Colors */
-$primaryColor: #6563ff;
-$primaryColor_light: saturate(lighten($primaryColor, 10%), 20%);
-$primaryColor_dark: desaturate(darken($primaryColor, 20%), 30%);
-
-$backgroundColor: #151515;
-
-$headerColor: $primaryColor;
-$textColor: $black;
-$linkColor: $primaryColor;
-
-
+    // Theme colors
+    --header-color: #080808;
+    --text-color: #080808;
+    --link-color: #5d00ff;
+    --button-color: #5d00ff;
+    --background-color: #f8f8f8;
+}
