--- a/server/sass/components/ui/DesktopNavigation/_DesktopNavigationLink.scss
+++ b/server/sass/components/ui/DesktopNavigation/_DesktopNavigationLink.scss
@@ -13,7 +13,7 @@
 }
 
 .DesktopNavigationLink__link {
-    color: var(--white);
+    color: var(--link-color);
     text-decoration: none;
     transition: 100ms;
     display: block;
@@ -25,7 +25,7 @@
     opacity: 0.6;
 
     &.current {
-        border-bottom: 2px solid var(--white);
+        border-bottom: 2px solid var(--link-color);
         opacity: 1;
     }
 }
