--- a/server/sass/config/_html.scss
+++ b/server/sass/config/_html.scss
@@ -93,7 +93,7 @@ form {
         width: calc(280px - 2em);
         margin: 8px auto;
         margin-top: 1em;
-
+        cursor: pointer;
     }
 }
 
