--- a/server/sass/main.scss
+++ b/server/sass/main.scss
@@ -16,6 +16,7 @@
 /* Common Components */
 @import
     './components/common/Header',
+    './components/common/auth/AccountCard',
     './components/common/Footer';
 
 
