--- a/server/sass/components/pages/_Login.scss
+++ b/server/sass/components/pages/_Login.scss
@@ -10,3 +10,25 @@
     font-size: var(--xs-font);
     text-align: center;
 }
+
+.Login__failure {
+    opacity: 0;
+    margin: 0 auto;
+    color: var(--white);
+    background: rgba(255, 0, 0, 0.7);
+    background: 1px solid darkred;
+    text-align: center;
+    width: 280px;
+    padding: 8px 0;
+
+
+    &[data-active=false] {
+        transition: 300ms;
+        opacity: 0;
+    }
+
+    &[data-active=true] {
+       transition: 50ms;
+       opacity: 1;
+    }
+}
