--- a/server/sass/main.scss
+++ b/server/sass/main.scss
@@ -17,6 +17,8 @@
 @import
     './components/common/Header',
     './components/common/auth/AccountCard',
+    './components/common/auth/AccountCardAuth',
+    './components/common/auth/AccountCardNoAuth',
     './components/common/Footer';
 
 
