Change footer background color

--- a/server/sass/components/common/_Footer.scss
+++ b/server/sass/components/common/_Footer.scss
@@ -3,5 +3,5 @@
     left: 0;
     right: 0;
     height: 30px;
-    background: var(--primary-color);
+    background: var(--background-color-light);
 }
