--- a/server/sass/mixins/_form.scss
+++ b/server/sass/mixins/_form.scss
@@ -4,7 +4,7 @@
     padding: 1em;
     display: flex;
     flex-direction: column;
-    background: #f0f0f0;
+    background: var(--dark-gray);
 
     > div {
         width: calc(280px - 2em);
@@ -19,12 +19,17 @@
             padding: 4px;
             width: calc(100% - 16px);
             display: block;
+            color: var(--text-color);
+            background-color: var(--black);
+            border: 0;
         }
 
         select {
             padding: 4px;
             width: calc(100% - 4px);
             display: block;
+            color: var(--white);
+            background-color: var(--black);
         }
     }
 
