--- a/server/sass/components/ui/_HomeButton.scss
+++ b/server/sass/components/ui/_HomeButton.scss
@@ -1,28 +1,31 @@
 #HomeButton {
     position: fixed;
-    top: 8px;
-    left: 10px;
+    top: 5px;
+    left: 5px;
     border-radius: 50%;
     z-index: 8;
+
+    @media #{$desktop_breakpoint} {
+        top: 4px;
+        left: 12px;
+    }
 }
 
 .HomeButton__logo {
     img {
-        width: 40px;
-        height: auto;
-        margin: 3px 4.5px;
+        width: 55px;
+        height: 55px;
     }
 
     @media #{$desktop_breakpoint} {
         img {
-            width: 30px;
-            height: auto;
-            margin: 3px 4.5px;    
-        }
-    
-        &:hover {
-            img {
-                animation-duration: 2s;
+            opacity: 0.4;
+            width: 40px;
+            height: 40px;
+            transition: 200ms;
+            
+            &:hover {
+                opacity: 1;
             }
         }
     }
