remove border from select tag

--- a/server/sass/mixins/_form.scss
+++ b/server/sass/mixins/_form.scss
@@ -30,6 +30,7 @@
             display: block;
             color: var(--white);
             background-color: var(--black);
+            border: 0;
         }
     }
 
