--- a/server/sass/components/common/auth/_AccountCardAuth.scss
+++ b/server/sass/components/common/auth/_AccountCardAuth.scss
@@ -1,3 +1,19 @@
 .AccountCardAuth {
-    
+    display: flex;
+    flex-direction: row;    
+    justify-content: space-between;
+}
+
+.AccountCardAuth__profileImage {
+    border: 0;
+    background: red;
+    border-radius: 100%;
+    height: 40px;
+    width: 40px;
+
+    img {
+        margin-top: 0;
+        height: 30px;
+        width: auto;
+    }
 }
