--- a/server/sass/components/pages/_Home.scss
+++ b/server/sass/components/pages/_Home.scss
@@ -15,3 +15,17 @@
     text-align: center;
     font-size: 2em;
 }
+
+.Home__contentImage {
+
+}
+
+.Home__contentText {
+    p {
+
+    }
+
+    small {
+        opacity: 0.6;
+    }
+}
