import AccountPageSettings styles

--- a/server/sass/main.scss
+++ b/server/sass/main.scss
@@ -46,4 +46,5 @@
     './components/pages/Login',
     './components/pages/AccountPage/AccountPage',
     './components/pages/AccountPage/AccountPageNoAuth',
+    './components/pages/AccountPage/AccountPageSettings',
     './components/pages/Wildcard';
