--- a/server/sass/components/common/auth/_AccountCardAuth.scss
+++ b/server/sass/components/common/auth/_AccountCardAuth.scss
@@ -12,7 +12,7 @@
 .AccountCardAuth__profileImage {
     margin-top: 12px;
     border: 0;
-    background: red;
+    background: var(--background-color);
     border-radius: 100%;
     height: 40px;
     width: 40px;
@@ -20,7 +20,7 @@
 
     img {
         margin-top: 0;
-        height: 30px;
+        height: 22px;
         width: auto;
     }
 
