Write down client side stream url and add watch scss

--- a/server/sass/main.scss
+++ b/server/sass/main.scss
@@ -44,6 +44,7 @@
     './components/pages/Home',
     './components/pages/Register',
     './components/pages/Login',
+    './components/pages/Watch',
     './components/pages/AccountPage/AccountPage',
     './components/pages/AccountPage/AccountPageAuth',
     './components/pages/AccountPage/AccountPageNoAuth',
