CW-34 set up dashboard components

--- a/server/sass/main.scss
+++ b/server/sass/main.scss
@@ -11,6 +11,7 @@
     './mixins/innerContent',
     './mixins/form',
     './mixins/page',
+    './mixins/dashboardContent',
     './mixins/accountPage';
 
 
