CW-53 add loading spinner

--- a/server/sass/main.scss
+++ b/server/sass/main.scss
@@ -15,6 +15,10 @@
     './mixins/accountPage';
 
 
+/* Components */
+@import
+    './components/LoadingSpinner';
+
 /* Common Components */
 @import
     './components/common/Header',
