add basic stylings and swtich for StreamInfoCard

--- a/server/sass/main.scss
+++ b/server/sass/main.scss
@@ -17,7 +17,8 @@
 
 /* Components */
 @import
-    './components/LoadingSpinner';
+    './components/LoadingSpinner',
+    './components/StreamInfoCard/StreamInfoCard';
 
 /* Common Components */
 @import
