--- a/server/sass/components/StreamInfoCard/_StreamInfoCard.scss
+++ b/server/sass/components/StreamInfoCard/_StreamInfoCard.scss
@@ -1,10 +1,21 @@
 .StreamInfoCard {
     width: 300px;
+    max-width: 300px;
     display: block;
     margin: 0 auto;
-    background-image: linear-gradient(to bottom right, #414141, #3f3f3f, #3a3a3a);
+    background-image: linear-gradient(to bottom right, #0f0f0e, #11110f, #14140f);
+    padding: 20px;
+    border-radius: 10px;
  
     &[data-type=loading] {
         height: 50px;
+        padding: 0;
+    }
+
+    @media #{$tablet_breakpoint} {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        
     }
 }
