--- a/server/sass/main.scss
+++ b/server/sass/main.scss
@@ -54,4 +54,7 @@
     './components/pages/AccountPage/AccountPage',
     './components/pages/AccountPage/AccountPageAuth',
     './components/pages/AccountPage/AccountPageNoAuth',
+    './components/pages/Dashboard/Dashboard',
+    './components/pages/Dashboard/UserDashboard',
+    './components/pages/Dashboard/BusinessDashboard',
     './components/pages/Wildcard';
