--- a/server/sass/components/pages/Dashboard/_businessDashboard.scss
+++ b/server/sass/components/pages/Dashboard/_businessDashboard.scss
@@ -1,3 +1,12 @@
 .BusinessDashboard {
     @include dashboardContent;
 }
+
+.BusinessDashboard__streams {
+    @media #{$tablet_breakpoint} {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+}
