maybe fix sass import

--- a/server/sass/main.scss
+++ b/server/sass/main.scss
@@ -54,6 +54,9 @@
     './components/pages/AccountPage/AccountPage',
     './components/pages/AccountPage/AccountPageAuth',
     './components/pages/AccountPage/AccountPageNoAuth',
+    './components/pages/Wildcard';
+
+@import
     './components/pages/Dashboard/Dashboard',
     './components/pages/Dashboard/BusinessDashboard',
-    './components/pages/Wildcard';
+    './components/pages/Dashboard/UserDashboard';
