--- a/server/sass/components/StreamInfoCard/_StreamInfoCard.scss
+++ b/server/sass/components/StreamInfoCard/_StreamInfoCard.scss
@@ -1,13 +1,14 @@
 .StreamInfoCard {
+    /* width: 100%;
     width: 300px;
     max-width: 300px;
     display: block;
     margin: 0 auto;
     background-image: linear-gradient(
         to bottom right,   
-        lighten(#0e0e10, 16%), 
-        lighten(#0e0e10, 12%), 
-        lighten(#0e0e10, 10%)
+        lighten(#0e0e10, 10%), 
+        lighten(#0e0e10, 13%), 
+        lighten(#0e0e10, 14%)
     );
     padding: 20px;
     border-radius: 10px;
@@ -15,5 +16,5 @@
     &[data-type=loading] {
         height: 50px;
         padding: 0;
-    }
+    } */
 }
