--- a/server/sass/mixins/_dashboardContent.scss
+++ b/server/sass/mixins/_dashboardContent.scss
@@ -1,5 +1,32 @@
 @mixin dashboardContent {
-    display: block;
+
+    article {
+        display: block;
+        max-width: 800px;
+        background: var(--dark-gray);
+        padding: 0;
+        border-radius: 8px;
+        border: 1px solid var(--gray);
+
+        &:not(:last-child) {
+            margin-bottom: 32px;
+        }
+    }
+
+    section {
+        width: 100%;
+        padding: 16px 0;
+        display: flex;
+        flex-direction: column;
+
+        &:not(:last-child) {
+            border-bottom: 1px solid var(--gray)
+        }
+    }
+
+    button {
+
+    }
 }
 
 .dashboardContent {
