--- a/server/sass/mixins/dashboardContent/_dashboardContentBlock.scss
+++ b/server/sass/mixins/dashboardContent/_dashboardContentBlock.scss
@@ -1,5 +1,9 @@
 @mixin dashboardContentBlock {
-
+    background: var(--dark-gray);
+    padding: 0;    
+    border-radius: 8px;
+    border: 1px solid var(--gray);
+    max-width: 800px;
 }
 
 .dashboardContentBlock {
