--- a/server/sass/mixins/dashboardContent/_dashboardContentRow.scss
+++ b/server/sass/mixins/dashboardContent/_dashboardContentRow.scss
@@ -1,5 +1,12 @@
 @mixin dashboardContentRow {
+    width: 100%;
+    padding: 16px 0;
+    display: flex;
+    flex-direction: column;
 
+    &:not(:last-child) {
+        border-bottom: 1px solid var(--gray);
+    }
 }
 
 .dashboardContentRow {
