--- a/server/sass/mixins/dashboardContent/_dashboardContent.scss
+++ b/server/sass/mixins/dashboardContent/_dashboardContent.scss
@@ -1,28 +1,6 @@
 @mixin dashboardContent {
-    display: block;
-    max-width: 800px;
-    background: var(--dark-gray);
-    padding: 0;
-    border-radius: 8px;
-    border: 1px solid var(--gray);
-
-    &:not(:last-child) {
-        margin-bottom: 32px;
-    }
-
-    section {
-        width: 100%;
-        padding: 16px 0;
-        display: flex;
-        flex-direction: column;
-
-        &:not(:last-child) {
-            border-bottom: 1px solid var(--gray)
-        }
-    }
-
-    button {
-
+    h2 {
+        
     }
 }
 
