--- a/server/sass/mixins/dashboardContent/_dashboardContentBlock.scss
+++ b/server/sass/mixins/dashboardContent/_dashboardContentBlock.scss
@@ -1,6 +1,6 @@
 @mixin dashboardContentBlock {
     background: var(--dark-gray);
-    padding: 0;    
+    padding: 8px 0;
     border-radius: 8px;
     border: 1px solid var(--gray);
     max-width: 800px;
