--- a/server/sass/mixins/dashboardContent/_dashboardContentBlock.scss
+++ b/server/sass/mixins/dashboardContent/_dashboardContentBlock.scss
@@ -4,6 +4,10 @@
     border-radius: 8px;
     border: 1px solid var(--gray);
     max-width: 800px;
+
+    &.small {
+        max-width: 400px;
+    }
 }
 
 .dashboardContentBlock {
