--- a/server/sass/components/pages/Dashboard/_BusinessDashboard.scss
+++ b/server/sass/components/pages/Dashboard/_BusinessDashboard.scss
@@ -3,16 +3,7 @@
 }
 
 .BusinessDashboard__contentInteractive {
-    button {
-        border: 0;
-        background-color: var(--button-color);
-        color: var(--white);
-        font-weight: bold;
-        padding: 12px;
-        margin: 8px auto;
-        margin-top: 1em;
-        cursor: pointer;
-    }
+    @include dashboardContentInteractive;
 }
 
 .BusinessDashboard__form {
