--- a/server/sass/main.scss
+++ b/server/sass/main.scss
@@ -22,6 +22,7 @@
 /* Components */
 @import
     './components/LoadingSpinner',
+    './components/VideoPlayer',
     './components/StreamInfoCard/StreamInfoCard';
 
 /* Common Components */
