Remove business key, only show rest of registration after user picks account type

--- a/server/sass/components/pages/_Register.scss
+++ b/server/sass/components/pages/_Register.scss
@@ -13,12 +13,20 @@
 
 .Register__field {
     &[data-active=false] {
-        height: 0;
-        overflow: hidden;
-        margin: 0;
+        display: none;
     }
 
     &[data-active=true] {
-        height: auto;
+        display: block;
+    }
+}
+
+.Register__button {
+    &[data-active=false] {
+        display: none;
+    }
+
+    &[data-active=true] {
+        display: block;
     }
 }
