Add dashboard design

--- a/server/sass/main.scss
+++ b/server/sass/main.scss
@@ -16,6 +16,7 @@
     './mixins/dashboardContent/dashboardContentInteractive',
     './mixins/dashboardContent/dashboardContentSection',
     './mixins/dashboardContent/dashboardContentRow',
+    './mixins/dashboardContent/dashboardContentForm',
     './mixins/accountPage';
 
 
