CW-68 Dashboard Content design

--- a/server/sass/mixins/dashboardContent/_dashboardContent.scss
+++ b/server/sass/mixins/dashboardContent/_dashboardContent.scss
@@ -2,8 +2,16 @@
     width: calc(100% - 32px);
     margin: 0 16px;
     
-    h2 {
+    h1 {
+        font-weight: 500;
+    }
 
+    h2 {
+        font-weight: 500;
+    }
+
+    h3, h4, h5, h6 {
+        font-weight: 400;
     }
 }
 
