CW-68 add dashboard form mixin

--- a/server/sass/components/pages/Dashboard/_BusinessDashboard.scss
+++ b/server/sass/components/pages/Dashboard/_BusinessDashboard.scss
@@ -8,6 +8,7 @@
 
 .BusinessDashboard__form {
     @include form;
+    @include dashboardContentForm;
 
     &[data-active=false] {
         display: none;
