CW-76 design legal agreements

--- a/server/sass/components/pages/_Register.scss
+++ b/server/sass/components/pages/_Register.scss
@@ -30,3 +30,12 @@
         display: block;
     }
 }
+
+.Register__disclaimer {
+    font-size: 13px;
+    text-align: center;
+
+    a {
+        text-decoration: none;
+    }
+}
