--- a/server/sass/components/pages/_Register.scss
+++ b/server/sass/components/pages/_Register.scss
@@ -34,6 +34,7 @@
 .Register__disclaimer {
     font-size: 13px;
     text-align: center;
+    opacity: 0.8;
 
     a {
         text-decoration: none;
