dashboardForm design updates

--- a/server/sass/mixins/dashboardContent/_dashboardContentForm.scss
+++ b/server/sass/mixins/dashboardContent/_dashboardContentForm.scss
@@ -4,6 +4,18 @@
     padding: 8px;
     background: var(--dark-gray);
     border: 1px solid var(--gray);
+
+    label {
+        padding: 4px;
+    }
+
+    input {
+        margin: 4px;
+    }
+
+    button {
+        display: block;
+    }
 }
 
 .dashboardContentForm {
