CW-83 dashboard design

--- a/server/sass/mixins/dashboardContent/_dashboardContent.scss
+++ b/server/sass/mixins/dashboardContent/_dashboardContent.scss
@@ -13,6 +13,12 @@
     h3, h4, h5, h6 {
         font-weight: 400;
     }
+
+    @media #{$1680_breakpoint} {
+        width: 1200px;
+        margin
+        0 auto
+    }
 }
 
 .dashboardContent {
