--- a/server/frontend/sass/main.scss
+++ b/server/frontend/sass/main.scss
@@ -53,14 +53,14 @@
 
 /* Page Components */
 @import 
-    './components/pages/Home',
-    './components/pages/Register',
-    './components/pages/Login',
-    './components/pages/Watch',
-    './components/pages/AccountPage/AccountPage',
-    './components/pages/AccountPage/AccountPageAuth',
-    './components/pages/AccountPage/AccountPageNoAuth',
-    './components/pages/Dashboard/Dashboard',
-    './components/pages/Dashboard/BusinessDashboard',
-    './components/pages/Dashboard/UserDashboard',
-    './components/pages/Wildcard';
+    './pages/Home',
+    './pages/Register',
+    './pages/Login',
+    './pages/Watch',
+    './pages/AccountPage/AccountPage',
+    './pages/AccountPage/AccountPageAuth',
+    './pages/AccountPage/AccountPageNoAuth',
+    './pages/Dashboard/Dashboard',
+    './pages/Dashboard/BusinessDashboard',
+    './pages/Dashboard/UserDashboard',
+    './pages/Wildcard';
